--- a/index.html
+++ b/index.html
@@ -376,61 +376,22 @@ button:hover::after {
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
-
-</div>
-</p>
-<form action="https://formspree.io/f/mgvynvrn" id="uploadForm" method="POST">
-<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/>
-<input name="_captcha" type="hidden" value="false">
+<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST"><input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/>
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
 <input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
 <input name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
 <textarea name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
-<label for="fileInput"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
-<input id="fileInput" required="" type="file"/>
-<input id="filelink" name="filelink" type="hidden"/>
+<label for="attachment"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
+<input id="attachment" name="attachment" required="" type="file"/>
 <label class="gdpr-label">
 <input name="gdpr" required="" type="checkbox"/>
-    Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
+  Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
-<button disabled="" id="submitBtn" type="submit">Изпрати / Αποστολή</button>
-<div id="status"></div>
+<button type="submit">Изпрати / Αποστολή</button>
+<input name="_captcha" type="hidden" value="false">
 </input></form>
-<script>
-  const fileInput = document.getElementById("fileInput");
-  const filelinkInput = document.getElementById("filelink");
-  const status = document.getElementById("status");
-  const submitBtn = document.getElementById("submitBtn");
-
-  fileInput.addEventListener("change", async () => {
-    const file = fileInput.files[0];
-    if (!file) return;
-
-    status.innerText = "Качване на файл... / Μεταφόρτωση αρχείου...";
-    submitBtn.disabled = true;
-
-    const formData = new FormData();
-    formData.append("file", file);
-
-    try {
-      const response = await fetch("https://file.io/?expires=1d", {
-        method: "POST",
-        body: formData
-      });
-      const data = await response.json();
-      if (data.success) {
-        filelinkInput.value = data.link;
-        status.innerText = "✅ Файлът е качен / Το αρχείο μεταφορτώθηκε!";
-        submitBtn.disabled = false;
-      } else {
-        status.innerText = "❌ Грешка при качване / Σφάλμα μεταφόρτωσης";
-      }
-    } catch (error) {
-      status.innerText = "❌ Проблем с мрежата / Πρόβλημα σύνδεσης";
-    }
-  });
-</script>
-</section>
+</div>
+</p></section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
 <div class="testimonial">
@@ -447,7 +408,7 @@ button:hover::after {
 </div>
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
-<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST">
+<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST"><input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/>
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text">
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
 <label class="gdpr-label">
