--- a/index.html
+++ b/index.html
@@ -376,21 +376,15 @@ button:hover::after {
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
-<form id="uploadForm" action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST"><input name="_captcha" type="hidden" value="false"/><input name="_template" type="hidden" value="table"/>
-<input type="hidden" name="_next" value="thanks.html"/>
-<input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
-<input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
-<input name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
-<textarea name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
-<label for="attachment"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
-<input id="attachment" name="attachment" required="" type="file"/>
-<label class="gdpr-label">
-<input name="gdpr" required="" type="checkbox"/>
-  Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
-</label>
-<button type="submit">Изпрати / Αποστολή</button>
-<input name="_captcha" type="hidden" value="false">
-</input></form>
+
+<iframe 
+  src="https://forms.fillout.com/t/9NUe5T1CmCus" 
+  width="100%" 
+  height="750" 
+  style="border:none;" 
+  title="Форма за оферта">
+</iframe>
+
 </div>
 </p></section>
 <section id="testimonials">
@@ -409,18 +403,15 @@ button:hover::after {
 </div>
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
-<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST"><input name="_captcha" type="hidden" value="false"/><input name="_template" type="hidden" value="table"/>
-<input type="hidden" name="_next" value="thanks.html"/>
-<input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text">
-<textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
-<label class="gdpr-label">
-<input name="gdpr" required="" type="checkbox"/>
-  Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
-</label>
-<button type="submit">Изпрати / Αποστολή</button>
-<input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη">
-<input name="_captcha" type="hidden" value="false"/>
-</input></input></form>
+
+<iframe 
+  src="https://forms.fillout.com/t/89sjbQ6ZJ1us" 
+  width="100%" 
+  height="600" 
+  style="border:none;" 
+  title="Форма за мнение">
+</iframe>
+
 </div>
 </section>
 <section id="contact">
