--- a/index.html
+++ b/index.html
@@ -378,12 +378,19 @@ button:hover::after {
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
 
 <iframe 
+  id="offerForm"
   src="https://forms.fillout.com/t/9NUe5T1CmCus" 
   width="100%" 
   height="750" 
   style="border:none;" 
   title="Форма за оферта">
 </iframe>
+<div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
+  🔒 <a href="https://prevodigr.eu/privacy.html" target="_blank" style="color:#003366; text-decoration: underline;">
+    Политика за поверителност / Πολιτική απορρήτου
+  </a>
+</div>
+
 
 </div>
 </p></section>
@@ -405,12 +412,19 @@ button:hover::after {
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
 
 <iframe 
+  id="feedbackForm"
   src="https://forms.fillout.com/t/89sjbQ6ZJ1us" 
   width="100%" 
   height="600" 
   style="border:none;" 
   title="Форма за мнение">
 </iframe>
+<div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
+  🔒 <a href="https://prevodigr.eu/privacy.html" target="_blank" style="color:#003366; text-decoration: underline;">
+    Политика за поверителност / Πολιτική απορρήτου
+  </a>
+</div>
+
 
 </div>
 </section>
@@ -447,5 +461,16 @@ button:hover::after {
   });
 </script>
 
+
+<script>
+window.addEventListener("message", function(event) {
+  if (event.origin.includes("fillout.com")) {
+    if (event.data?.type === "submissionComplete") {
+      window.location.href = "thanks.html";
+    }
+  }
+});
+</script>
 </body>
+
 </html>
