--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 
 <html lang="bg">
-<head>
+<head><link as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap&amp;display=swap" rel="preload"/><link as="image" href="assets/images/bg-greece.jpg" rel="preload"/><link as="image" href="assets/images/logo.png" rel="preload"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap&amp;display=swap" rel="stylesheet"/>
 <style>
     
 /* GDPR checkbox styling */
@@ -237,7 +237,7 @@ button:hover::after {
 }
 
 </style>
-<script>
+<script defer="defer">
   document.addEventListener("DOMContentLoaded", function() {
     const nav = document.querySelector("nav");
     const toggle = document.querySelector(".menu-toggle");
@@ -246,7 +246,7 @@ button:hover::after {
     });
   });
 </script>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/><script type="application/ld+json">
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/><script defer="defer" type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
@@ -271,7 +271,7 @@ button:hover::after {
 </script></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
+<img alt="Plamen Mollov Logo" height="160" src="assets/images/logo.png" width="160"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
@@ -493,7 +493,7 @@ button:hover::after {
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
-<script>
+<script defer="defer">
   document.addEventListener("DOMContentLoaded", function() {
     const forms = document.querySelectorAll("form");
     forms.forEach(function(form) {
