--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 
 <html lang="bg">
-<head><link as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap&amp;display=swap" rel="preload"/><link as="image" href="assets/images/bg-greece.jpg" rel="preload"/><link as="image" href="assets/images/logo.png" rel="preload"/>
+<head><link as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap&amp;display=swap" rel="preload"/><link as="image" href="bg-greece.webp" rel="preload"/><link as="image" href="logo.webp" rel="preload"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
@@ -78,7 +78,7 @@ body {
 
     .hero {
   position: relative;
-  background-image: url('assets/images/bg-greece.jpg');
+  background-image: url('bg-greece.webp');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -124,6 +124,8 @@ body {
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     input, textarea {
+  cursor: text;
+
       width: 100%;
       padding: 0.8rem;
       margin-top: 0.5rem;
@@ -252,8 +254,8 @@ button:hover::after {
   "@type": "ProfessionalService",
   "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
   "url": "https://www.prevodigr.eu",
-  "logo": "https://www.prevodigr.eu/assets/images/logo.png",
-  "image": "https://www.prevodigr.eu/assets/images/bg-greece.jpg",
+  "logo": "https://www.prevodigr.eu/logo.webp",
+  "image": "https://www.prevodigr.eu/bg-greece.webp",
   "description": "Заклет преводач с гръцки език с над 17 години опит. Устни и писмени преводи, преводи на документи, легализация, имотни сделки в Гърция.",
   "address": {
     "@type": "PostalAddress",
@@ -271,7 +273,7 @@ button:hover::after {
 </script></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" height="160" src="assets/images/logo.png" width="160"/>
+<img alt="Plamen Mollov Logo" height="160" src="logo.webp" width="160"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
