--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
 
     .hero {
   position: relative;
-  background-image: url('assets/images/bg-greece.jpg');
+  background-image: url('assets/images/bg-greece.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -228,15 +228,14 @@ button:hover::after {
   50%  { transform: translateY(-5px); opacity: 1; }
   100% { transform: translateY(-10px); opacity: 0; }
 }</style>
-
 <meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/><script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
   "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
   "url": "https://www.prevodigr.eu",
-  "logo": "https://www.prevodigr.eu/assets/images/logo.png",
-  "image": "https://www.prevodigr.eu/assets/images/bg-greece.jpg",
+  "logo": "https://www.prevodigr.eu/assets/images/logo.webp",
+  "image": "https://www.prevodigr.eu/assets/images/bg-greece.webp",
   "description": "Заклет преводач с гръцки език с над 17 години опит. Устни и писмени преводи, преводи на документи, легализация, имотни сделки в Гърция.",
   "address": {
     "@type": "PostalAddress",
@@ -254,7 +253,7 @@ button:hover::after {
 </script><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
+<img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
